# dify

.github/workflows/: api-tests.yml  autofix.yml  cli-e2e.yml  cli-edge.yml  cli-release.yml  cli-smoke.yml  cli-tests.yml  db-migration-test.yml  hotfix-cherry-pick.yml  main-ci.yml  post-merge.yml  pyrefly-diff.yml  pyrefly-type-coverage-comment.yml  pyrefly-type-coverage.yml  style.yml  tool-test-sdks.yaml  translate-i18n-claude.yml  trigger-i18n-sync.yml  vdb-tests-full.yml  vdb-tests.yml  web-e2e.yml  web-tests.yml
api/: pyproject.toml
api/controllers/console/: version.py
api/providers/trace/trace-langsmith/: pyproject.toml
api/providers/trace/trace-opik/: pyproject.toml
api/providers/vdb/vdb-analyticdb/: pyproject.toml
api/providers/vdb/vdb-chroma/: pyproject.toml
api/providers/vdb/vdb-elasticsearch/: pyproject.toml
api/providers/vdb/vdb-huawei-cloud/: pyproject.toml
api/providers/vdb/vdb-oracle/: pyproject.toml
api/providers/vdb/vdb-qdrant/: pyproject.toml
api/providers/vdb/vdb-tidb-on-qdrant/: pyproject.toml
docker/: .env.example
